--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
     align-items: center;
     flex-direction: column;
     align-items: stretch;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    box-shadow: 0 19px 38px hsl(265, 86%, 68%), 0 15px 12px rgba(0,0,0,0.22);
     overflow-y: scroll;
   }
 
@@ -48,6 +48,13 @@
     border-radius: 5px;
     margin-top: 10px;
     transition: 150ms;
+    transition: 0.2s;
+  }
+
+  .icon {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 1.5em;
   }
 
   .sidebar-item:hover,.sidebar-item:focus{
@@ -118,13 +125,15 @@
   .button{
     flex: 0 0 5%;
     margin: 1rem;
+    padding: 0.8rem;
     color: white;
-    height: 3rem;
     background-color: #1a1919;
     border-radius: 1.5rem;
     border: solid 1px hsl(265, 96%, 56%);
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    display: flex;
+    justify-content: center;
   }
 
   .button:hover{
@@ -141,7 +150,6 @@
   }
 
   .file-upload {
-    display: block;
     flex: 0 0 5%;
     margin: 1rem;
     height: 3rem;
@@ -153,6 +161,8 @@
     color: white; /* This sets text color to white */
     padding: 10px;
     text-align: center;
+    display: flex;
+    justify-content: center;
   }
   input[type="file"] {
     display: none;
