--- a/src/App.css
+++ b/src/App.css
@@ -194,5 +194,99 @@
     text-align: center;
     font-size: 1.5rem;
   }
+
+
+
+
   
-  
+  @media (max-width: 600px) {
+  html{
+    height: 100vh;
+  }
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      'image'
+      'slider'
+      'sidebar';
+    height: 100vh;
+    width: 100%;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .main-image {
+    width: 100%;
+  }
+
+  .sidebar {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    height: 5rem;
+    box-shadow: none;
+    overflow-x: scroll;
+  }
+
+  .sidebar-item {
+    margin: 0.5rem 0;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    box-shadow: none;
+  }
+
+  .icon {
+    font-size: 1.2em;
+    margin: 0 0.5rem;
+  }
+
+  .slider-container {
+    margin-top: 0;
+  }
+
+  .slider {
+    width: 100%;
+    height: 10px;
+  }
+
+  .button {
+    margin: 0.5rem;
+    padding: 0.6rem;
+    font-size: 0.8rem;
+    border-radius: 1rem;
+  }
+
+  .label {
+    font-size: 0.9rem;
+  }
+
+  .file-upload {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    height: 2.5rem;
+    border-radius: 1rem;
+  }
+
+  .input-field {
+    height: 1.5rem;
+    font-size: 0.8rem;
+    padding-left: 5px;
+  }
+
+  .slider-value {
+    font-size: 1rem;
+  }
+
+  #myCanvas, #myCanvas1, #myCanvas2 {
+    margin-top: 1rem;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    box-shadow: none;
+  }
+}
